# EpiDL

./: pyproject.toml  readme.md
src/EpiDL/: __init__.py  api.py
src/EpiDL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/EpiDL/Model/: DL.py  SIR.py  __init__.py
